experimental/ir/testdata/services/missing_args.proto.stderr.txt
error: expected exactly one type in method return type, got 0
  --> testdata/services/missing_args.proto:7:23
   |
 7 |     rpc M1(M) returns ();
   |                       ^^

error: expected exactly one type in method parameter list, got 0
  --> testdata/services/missing_args.proto:8:11
   |
 8 |     rpc M2() returns (M);
   |           ^^

encountered 2 errors
